# vcf_analyzer

./: .gitmodules  README.md
cui/: CMakeLists.txt  kcachegrind.sh  vcf_analyzer.cc
cui_batch/: CMakeLists.txt  ParallelVCFAnalyzer.cc  ParallelVCFAnalyzer.h  run.sh  sort_and_add_header.sh  summrize_result.py  vcf_analyzer_batch.cc
src/: FourSpace.cc  FourSpaceManager.cc  FourSpaceSearch.cc  OpenRestDependency.cc  OpenRestList.cc  OpponentFourInfo.cc  RealizeSequence.cc  RelaxedFour.cc  VCFAnalyzer.cc  VCFTranspositionTable.cc
src/include/: FourSpace.h  FourSpaceManager-inl.h  FourSpaceManager.h  FourSpaceSearch-inl.h  FourSpaceSearch.h  OpenRestDependency.h  OpenRestList.h  OpponentFourInfo.h  RealizeSequence.h  RelaxedFour-inl.h  RelaxedFour.h  VCFAnalyzer-inl.h  VCFAnalyzer.h  VCFParameter.h  VCFTranspositionTable.h
test/: CMakeLists.txt  VCFAnalyzerTest.cc  run.sh
test/four_space_search/: CMakeLists.txt  FourSpaceManagerTest.cc  FourSpaceSearchTest.cc  FourSpaceTest.cc  OpenRestDependencyTest.cc  OpenRestListTest.cc  OpponentFourInfoTest.cc  RealizeSequenceTest.cc  RelaxedFourTest.cc  kcachegrind.sh  run.sh
test/vcf_analyzer/: CMakeLists.txt  VCFAnalyzerTest.cc
